--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
     <title>
         This is a website that I have created
     </title>
 </head>
+<body>
+
+</body>
+
 </html>
