--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,7 +7,11 @@
     </title>
 </head>
 <body>
-
+    <p> <h1> This is the first paragraph </h1></p>
+    <p> <h2> This is the second paragraph </h2></p>
+    <p> <h3> This is the third paragraph </h3></p>
+    <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg">
+        </a>
 </body>
 
 </html>
