done with the first two tasks

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,10 +7,14 @@
     </title>
 </head>
 <body>
-    <p> <h1> This is the first paragraph </h1></p>
-    <p> <h2> This is the second paragraph </h2></p>
-    <p> <h3> This is the third paragraph </h3></p>
-    <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg">
+    <p> I am tired of this work</p>
+    <p> ALU is really stressing me oooo</p>
+    <p> I am going gome</p>
+    <p> Very soon oooo</p>
+    <h1> This are words with a h1 tagging</h1>
+    <h2> This are words with a h2 tagging</h2>
+    <h3> This are words with a h3 tagging</h3>
+    <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" height="400px" width="400px">
         </a>
 </body>
 
