--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,6 +7,7 @@
     </title>
 </head>
 <body>
+    <a href="./tweets.html"> Index</a>
     <p> I am tired of this work</p>
     <p> ALU is really stressing me oooo</p>
     <p> I am going gome</p>
@@ -14,7 +15,7 @@
     <h1> This are words with a h1 tagging</h1>
     <h2> This are words with a h2 tagging</h2>
     <h3> This are words with a h3 tagging</h3>
-    <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" height="400px" width="600px">
+    <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" alt="My image">
         </a>
 </body>
 
