--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,7 +7,14 @@
     </title>
 </head>
 <body>
-    <a href="./tweets.html"> Index</a>
+    <header> 
+        <ul>
+            <li> <a href="./base_index.html">Base</a></li>
+            <li> <a href="./tweets.html">Tweets</a></li>
+            <li> <a href="./index.html"> Index</a></li>
+        </ul>
+    </header>
+    <a href="./tweets.html"> Tweets</a>
     <p> I am tired of this work</p>
     <p> ALU is really stressing me oooo</p>
     <p> I am going gome</p>
@@ -17,6 +24,9 @@
     <h3> This are words with a h3 tagging</h3>
     <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" alt="My image">
         </a>
+<footer>
+    <p> Made by Emmanuel Yakubu: <a href="https://github.com/Emmanuel-Begati"> here </a></p>
+</footer>
 </body>
 
 </html>
