--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -5,6 +5,9 @@
     <title>
         This is a website that I have created
     </title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
 
