--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,6 +5,9 @@
     <title>
         This is a website that I have created
     </title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
     <header> 
@@ -14,6 +17,7 @@
             <li> <a href="./index.html"> Index</a></li>
         </ul>
     </header>
+    <main>
     <a href="./tweets.html"> Tweets</a>
     <p> I am tired of this work</p>
     <p> ALU is really stressing me oooo</p>
@@ -24,6 +28,8 @@
     <h3> This are words with a h3 tagging</h3>
     <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" alt="My image">
         </a>
+        </main>
+    <aside> placeholder to add comment thread later</aside>
 <footer>
     <p> Made by Emmanuel Yakubu: <a href="https://github.com/Emmanuel-Begati"> here </a></p>
 </footer>
