--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,10 +5,26 @@
     <title>
         This is a website that I have created
     </title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
+    <header> 
+        <ul>
+            <li> <a href="./base_index.html">Base</a></li>
+            <li> <a href="./tweets.html">Tweets</a></li>
+            <li> <a href="./index.html"> Index</a></li>
+        </ul>
+    </header>
+    <main>
     <a href="./index.html"> Index</a>
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Kanye West and his new wife Bianca Censori spotted out on another date 📸 <a href="https://t.co/o9rWogynxP">pic.twitter.com/o9rWogynxP</a></p>&mdash; Daily Loud (@DailyLoud) <a href="https://twitter.com/DailyLoud/status/1661814571886100480?ref_src=twsrc%5Etfw">May 25, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script> 
+    </main>
+    <aside> placeholder to add comment thread later</aside>
+    <footer>
+        <p> Made by Emmanuel Yakubu: <a href="https://github.com/Emmanuel-Begati"> here </a></p>
+    </footer>
 </body>
 
 </html>
