--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -18,6 +18,7 @@
         </ul>
     </header>
     <main>
+    <article>
     <a href="./tweets.html"> Tweets</a>
     <p> I am tired of this work</p>
     <p> ALU is really stressing me oooo</p>
@@ -28,8 +29,11 @@
     <h3> This are words with a h3 tagging</h3>
     <a href="https://github.com/Emmanuel-Begati/alu-web-development"><img src="https://uploads-ssl.webflow.com/6105315644a26f77912a1ada/610588d3f465e928f1c84446_Holberton_Tulsa_1186.jpg" alt="My image">
         </a>
-        </main>
+    </article>
+        
     <aside> placeholder to add comment thread later</aside>
+
+    </main>
 <footer>
     <p> Made by Emmanuel Yakubu: <a href="https://github.com/Emmanuel-Begati"> here </a></p>
 </footer>
