--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,8 +5,8 @@
     <title>
         This is a website that I have created
     </title>
-    <link href="base.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../css_basic/base.css" rel="stylesheet">
+    <link href="../css_basic/styles.css" rel="stylesheet">
 
 </head>
 <body class="works_on_smartphone">
