--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -14,6 +14,38 @@
                 <a href=""></a>
                 </div>
             </div>
+            <main>
+                <section>
+                    <div>
+                        <h1> This is a header tag</h1>
+                        <h4> I am typing smaller words now</h4>
+                        <button>Button</button>
+                    </div>
+                    <div>
+                        <h1> This is another header</h1>
+                        <div> 
+                            <img src="" alt="">
+                            <h1>Heading</h1>
+                            <p>This is a text</p>
+                        </div>
+                        <div> 
+                            <img src="" alt="">
+                            <h1>Heading</h1>
+                            <p>This is a text</p>
+                        </div>
+                        <div> 
+                            <img src="" alt="">
+                            <h1>Heading</h1>
+                            <p>This is a text</p>
+                        </div>
+                        <div>  
+                            <img src="" alt="">
+                            <h1>Heading</h1>
+                            <p>This is a text</p>
+                        </div>
+                    </div>
+                </section>
+            </main>
         </header>
     </body>
 </html>
