Done with lke three tasks

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -45,6 +45,139 @@
                         </div>
                     </div>
                 </section>
+                <section>
+                    <div>
+                        <img src="">
+                        <div>
+                            <blockquote> You must take your opponent to a thick forest where 2+2 equals 5 and the path leading out is only wide enough for one.</blockquote>
+                            <p>Mikhal Tal</p>
+                            <p> This is a text to back up my quote
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h1> Heading</h1>
+                    <div>
+
+
+                        <div>
+                            <img src="">
+                            <h2> Header</h2>
+                            <p> This is a text </p>
+                            <div>
+                                <img src="">
+                                <h3> Header</h3>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                </div>
+                                <p> This is a text </p>
+                            </div>
+
+                        </div>
+
+                        <div>
+                            <img src="">
+                            <h2> Header</h2>
+                            <p> This is a text </p>
+                            <div>
+                                <img src="">
+                                <h3> Header</h3>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                </div>
+                                <p> This is a text </p>
+                            </div>
+
+                        </div>
+
+
+                        <div>
+                            <img src="">
+                            <h2> Header</h2>
+                            <p> This is a text </p>
+                            <div>
+                                <img src="">
+                                <h3> Header</h3>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                </div>
+                                <p> This is a text </p>
+                            </div>
+
+                        </div>
+
+
+                        <div>
+                            <img src="">
+                            <h2> Header</h2>
+                            <p> This is a text </p>
+                            <div>
+                                <img src="">
+                                <h3> Header</h3>
+                            </div>
+                            <div>
+                                <div>
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                </div>
+                                <p> This is a text </p>
+                            </div>
+
+                        </div>
+                        
+                    </div>
+                </section>
+                <section>
+                    <h1>Heading</h1>
+                    <div>
+                        <div>
+                            <img src="">
+                            <h2> This is the heading</h2>
+                            <p></p>
+                        </div>
+
+                        <div>
+                            <img src="">
+                            <h2> This is the heading</h2>
+                            <p></p>
+                        </div>
+
+                        <div>
+                            <img src="">
+                            <h2> This is the heading</h2>
+                            <p></p>
+                        </div>
+                        <div>
+                            <img src="">
+                            <h2> This is the heading</h2>
+                            <p></p>
+                        </div>
+                        <button> This is a button</button>
+                    </div>
+                    <button> This is a button</button>
+                </section>
             </main>
         </header>
     </body>
