almost done with the first project

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -14,6 +14,7 @@
                 <a href=""></a>
                 </div>
             </div>
+        </header>
             <main>
                 <section>
                     <div>
@@ -178,7 +179,45 @@
                     </div>
                     <button> This is a button</button>
                 </section>
+                <section>
+                    <h1> FAQ </h1>
+                    <div>
+                        <div>
+                            <div>
+                                <h1> How does this work?</h1>
+                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
+                            </div>
+                            <div>
+                                <h1> How does this work?</h1>
+                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <h1> How does this work?</h1>
+                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
+                            </div>
+
+                            <div>
+                                <h1> How does this work?</h1>
+                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
-        </header>
+        <footer>
+            <div>
+                <div>
+                    <img src="" alt="My image">
+                    <div>
+                        <a href=""> <img src="" alt="footer-image"> </a>
+                        <a href=""> <img src="" alt="footer-image"> </a>
+                        <a href=""> <img src="" alt="footer-image"> </a>
+                    </div>
+                </div>
+                <p> This is a text </p>
+            </div>
+        </footer>
     </body>
 </html>
