omo.. this thing hard ooo

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" href="../css_advanced/styles.css"
     </head>
     <body>
         <header>
-            <div>
-                <a href=""> <img src="https://plus.unsplash.com/premium_photo-1684783848349-fe1d51ab831b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="A woman working on somthing"> </a>
+            <div class="header-section">
+                <a href=""> <img src="../css_advanced/favicon.ico" alt="A woman working on somthing" id="header-logo"> </a>
             
-                <div>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <div class="nav-bar">
+                <a href="">Courses</a>
+                <a href=""> Pricing</a>
+                <a href="">Login</a>
                 </div>
             </div>
         </header>
