--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -6,44 +6,53 @@
     </head>
     <body>
         <header>
-            <div class="header-section">
-                <a href=""> <img src="../css_advanced/favicon.ico" alt="A woman working on somthing" id="header-logo"> </a>
-            
-                <div class="nav-bar">
+            <div class="logo">
+                <a href=""> <img src="../css_advanced/favicon.ico" alt="A woman working on somthing" > </a>
+                </div>
+
+                <div class="navbar">
                 <a href="">Courses</a>
                 <a href=""> Pricing</a>
                 <a href="">Login</a>
                 </div>
-            </div>
+            
         </header>
             <main>
-                <section>
-                    <div>
-                        <h1> This is a header tag</h1>
-                        <h4> I am typing smaller words now</h4>
-                        <button>Button</button>
+                <section class="header-section">
+                    <div class="schooled">
+                        <h1 class="schooled-title">
+                            Get schooled
+                        </h1>
+                        <p class="schooled-text">
+                            <span>SMILES</span>
+                            <span>GRIN</span>
+                            <span>LAUGH</span>
+                        </p>
+                        <button class="register-btn">REGISTER FOR FREE</button>
                     </div>
-                    <div>
-                        <h1> This is another header</h1>
-                        <div> 
-                            <img src="" alt="">
-                            <h1>Heading</h1>
-                            <p>This is a text</p>
-                        </div>
-                        <div> 
-                            <img src="" alt="">
-                            <h1>Heading</h1>
-                            <p>This is a text</p>
-                        </div>
-                        <div> 
-                            <img src="" alt="">
-                            <h1>Heading</h1>
-                            <p>This is a text</p>
-                        </div>
-                        <div>  
-                            <img src="" alt="">
-                            <h1>Heading</h1>
-                            <p>This is a text</p>
+                    <div class="pros">
+                        <h2 class="pros-title"><span class="secondary-color">Learn</span> from the pros</h2>
+                        <div class="pros-block">
+                            <div class="pros-card">
+                                <img src="imgs/philip.png" alt="philip">
+                                <h3>Phillip Massey</h3>
+                                <p>« Smile of the year » 2018 - 2019</p>
+                            </div>
+                            <div class="pros-card">
+                                <img src="imgs/nannie.png" alt="nannie">
+                                <h3>Nannie Lawrence</h3>
+                                <p>Best « little smile » 2017</p>
+                            </div>
+                            <div class="pros-card">
+                                <img src="imgs/bruce.png" alt="bruce">
+                                <h3>Bruce Walters</h3>
+                                <p>Best « Friend Smile » live performance 2019</p>
+                            </div>
+                            <div class="pros-card">
+                                <img src="imgs/henry.png" alt="henry">
+                                <h3>Henry Hughes</h3>
+                                <p>« 24h smiles » winner 2016 - 2019</p>
+                            </div>
                         </div>
                     </div>
                 </section>
