--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -56,14 +56,16 @@
                         </div>
                     </div>
                 </section>
-                <section>
-                    <div>
-                        <img src="">
+                <section class="presenter-section">
+                    <div class="presenter-block">
+                        <img src="../css_advanced/imgs/avatar.png" alt="avatar">
                         <div>
-                            <blockquote> You must take your opponent to a thick forest where 2+2 equals 5 and the path leading out is only wide enough for one.</blockquote>
-                            <p>Mikhal Tal</p>
-                            <p> This is a text to back up my quote
-                            </p>
+                            <blockquote>
+                                « Those tutorials are concise and go straight to the point. I can’t think of a better
+                                place to learn smiling. And it’s so fun!
+                            </blockquote>
+                            <p class="person-name">Person Name</p>
+                            <p class="weather">weather presenter</p>
                         </div>
                     </div>
                 </section>
