--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -34,22 +34,22 @@
                         <h2 class="pros-title"><span class="secondary-color">Learn</span> from the pros</h2>
                         <div class="pros-block">
                             <div class="pros-card">
-                                <img src="imgs/philip.png" alt="philip">
+                                <img src="../css_advanced/imgs/philip.png" alt="philip">
                                 <h3>Phillip Massey</h3>
                                 <p>« Smile of the year » 2018 - 2019</p>
                             </div>
                             <div class="pros-card">
-                                <img src="imgs/nannie.png" alt="nannie">
+                                <img src="../css_advanced/imgs/nannie.png" alt="nannie">
                                 <h3>Nannie Lawrence</h3>
                                 <p>Best « little smile » 2017</p>
                             </div>
                             <div class="pros-card">
-                                <img src="imgs/bruce.png" alt="bruce">
+                                <img src="../css_advanced/imgs/bruce.png" alt="bruce">
                                 <h3>Bruce Walters</h3>
                                 <p>Best « Friend Smile » live performance 2019</p>
                             </div>
                             <div class="pros-card">
-                                <img src="imgs/henry.png" alt="henry">
+                                <img src="../css_advanced/imgs/henry.png" alt="henry">
                                 <h3>Henry Hughes</h3>
                                 <p>« 24h smiles » winner 2016 - 2019</p>
                             </div>
