--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title></title>
-        <link rel="stylesheet" href="../css_advanced/styles.css"
+        <link rel="stylesheet" href="../css_advanced/styles.css">
     </head>
     <body>
         <header>
@@ -69,93 +69,93 @@
                         </div>
                     </div>
                 </section>
-                <section>
-                    <h1> Heading</h1>
-                    <div>
-
-
-                        <div>
-                            <img src="">
-                            <h2> Header</h2>
-                            <p> This is a text </p>
-                            <div>
-                                <img src="">
-                                <h3> Header</h3>
+                <section class="video-section">
+                    <h1> Most <span class="secondary-color">popular</span> tutorials</h1>
+                    <div class="video-container">
+                        <div class="video">
+                            <img src="../css_advanced/imgs/preview_diag.png">
+                            <a class="play" href="#"><img src="../css_advanced/imgs/play.png" alt=""></a>
+                            <h2> Diagonal smile</h2>
+                            <p> This is a diagonal smile by one of our employees. Is she not beautiful </p>
+                            <div class="video-author">
+                                <img src="../css_advanced/imgs/philip_sm.png" class="author-picture">
+                                <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
                             </div>
-                            <div>
-                                <div>
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
+                            <div class="rating-duration">
+                                <div class="rating">
+                                    <img src="" alt="img">
+                                    <img src="" alt="img">
+                                    <img src="" alt="img">
+                                    <img src="" alt="img">
+                                    <img src="" alt="img">
                                 </div>
-                                <p> This is a text </p>
+                                <p class="duration"> 8 mins </p>
                             </div>
 
                         </div>
 
-                        <div>
-                            <img src="">
-                            <h2> Header</h2>
-                            <p> This is a text </p>
-                            <div>
-                                <img src="">
-                                <h3> Header</h3>
+                        <div class="video">
+                            <img src="../css_advanced/imgs/preview_hap.png">
+                            <h2> Diagonal smile</h2>
+                            <p> This is a happy smile by one of our employees. Is she not beautiful </p>
+                            <div class="video-author">
+                                <img src="../css_advanced/imgs/philip_sm.png" class="author-picture">
+
+                                <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
                             </div>
                             <div>
-                                <div>
+                                <div class="rating">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                 </div>
-                                <p> This is a text </p>
+                                <p class="duration"> 8 mins </p>
+                            </div>
+
+                        </div>
+
+                        <div class="video">
+                            <img src="../css_advanced/imgs/preview_nat.png">
+                            <h2> Diagonal smile</h2>
+                            <p> This is a natural smile by one of our employees. Is she not beautiful </p>
+                            <div class="video-author">
+                                <img src="../css_advanced/imgs/philip_sm.png" class="author-picture">
+
+                                <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
+                            </div>
+                            <div>
+                                <div class="rating">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                    <img src="">
+                                </div>
+                                <p class="duration"> 8 mins </p>
                             </div>
 
                         </div>
 
 
-                        <div>
-                            <img src="">
-                            <h2> Header</h2>
-                            <p> This is a text </p>
-                            <div>
-                                <img src="">
-                                <h3> Header</h3>
+                        <div class="video">
+                            <img src="../css_advanced/imgs/preview_sad.png">
+                            <h2> Diagonal smile</h2>
+                            <p> This is a sad smile by one of our employees. Is she not beautiful </p>
+                            <div class="video-author">
+                                <img src="../css_advanced/imgs/philip_sm.png" class="author-picture">
+                                <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
                             </div>
-                            <div>
-                                <div>
+                            <div class="rating-duration">
+                                <div class="rating">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                     <img src="">
                                 </div>
-                                <p> This is a text </p>
-                            </div>
-
-                        </div>
-
-
-                        <div>
-                            <img src="">
-                            <h2> Header</h2>
-                            <p> This is a text </p>
-                            <div>
-                                <img src="">
-                                <h3> Header</h3>
-                            </div>
-                            <div>
-                                <div>
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                </div>
-                                <p> This is a text </p>
+                                <p class="duration"> 8 mins </p>
                             </div>
 
                         </div>
