--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -162,34 +162,39 @@
                         
                     </div>
                 </section>
-                <section>
-                    <h1>Heading</h1>
-                    <div>
-                        <div>
-                            <img src="">
-                            <h2> This is the heading</h2>
-                            <p></p>
+                <section class="membership-section">
+                    <h1><span class="secondary-color">Free</span> membership</h1>
+                    <div class="memberships">
+                        <div class="membership-card">
+                            <img src="../css_advanced/svgs/smile.svg" alt="smile">
+                            <h2>Lorem ipsum</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
                         </div>
-
-                        <div>
-                            <img src="">
-                            <h2> This is the heading</h2>
-                            <p></p>
+                        <div class="membership-card">
+                            <img src="../css_advanced/svgs/smile.svg" alt="smile">
+                            <h2>Lorem ipsum</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
                         </div>
-
-                        <div>
-                            <img src="">
-                            <h2> This is the heading</h2>
-                            <p></p>
+                        <div class="membership-card">
+                            <img src="../css_advanced/svgs/smile.svg" alt="smile">
+                            <h2>Lorem ipsum</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
                         </div>
-                        <div>
-                            <img src="">
-                            <h2> This is the heading</h2>
-                            <p></p>
+                        <div class="membership-card">
+                            <img src="../css_advanced/svgs/smile.svg" alt="smile">
+                            <h2>Lorem ipsum</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
                         </div>
-                        <button> This is a button</button>
                     </div>
-                    <button> This is a button</button>
+                    <button class="register-btn">REGISTER FOR FREE</button>
                 </section>
                 <section>
                     <h1> FAQ </h1>
