corrected some stuff

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -201,7 +201,7 @@
                     <button class="register-btn">REGISTER FOR FREE</button>
                 </section>
                 <section class="faq-section">
-                    <h1>F.A.Q.</h1>
+                    <h1 style="text-align: center;">F.A.Q.</h1>
                     <div class="faq-list">
                         <div class="faq-item">
                             <h2>How does this work?</h2>
@@ -251,11 +251,11 @@
             <footer>
                 <div class="ft-container">
                     <div class="nav-ft">
-                        <img src="imgs/logo.png" alt="">
+                        <img src="../css_advanced/imgs/logo.png" alt="">
                         <div>
-                            <a href=""><img src="svgs/facebook.svg" alt=""></a>
-                            <a href=""><img src="svgs/twitter.svg" alt=""></a>
-                            <a href=""><img src="svgs/Combined Shape.svg" alt=""></a>
+                            <a href=""><img src="../css_advanced/svgs/facebook.svg" alt=""></a>
+                            <a href=""><img src="../css_advanced/svgs/twitter.svg" alt=""></a>
+                            <a href=""><img src="../css_advanced/svgs/Combined Shape.svg" alt=""></a>
                         </div>
                     </div>
                     <p>©smileschool 2020</p>
