--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -100,6 +100,7 @@
 
                         <div class="video">
                             <img src="../css_advanced/imgs/preview_hap.png">
+                            <a class="play" href="#"><img src="../css_advanced/imgs/play.png" alt=""></a>
                             <h2> Diagonal smile</h2>
                             <p> This is a happy smile by one of our employees. Is she not beautiful </p>
                             <div class="video-author">
@@ -122,8 +123,10 @@
 
                         <div class="video">
                             <img src="../css_advanced/imgs/preview_nat.png">
-                            <h2> Diagonal smile</h2>
-                            <p> This is a natural smile by one of our employees. Is she not beautiful </p>
+                            <a class="play" href="#"><img src="../css_advanced/imgs/play.png" alt=""></a>
+                          
+                            <h2 class="vid-title"> Diagonal smile</h2>
+                            <p class="vid-desc"> This is a natural smile by one of our employees. Is she not beautiful </p>
                             <div class="video-author">
                                 <img src="../css_advanced/imgs/philip_sm.png" class="author-picture">
 
@@ -145,6 +148,7 @@
 
                         <div class="video">
                             <img src="../css_advanced/imgs/preview_sad.png">
+                            <a class="play" href="#"><img src="../css_advanced/imgs/play.png" alt=""></a>
                             <h2> Diagonal smile</h2>
                             <p> This is a sad smile by one of our employees. Is she not beautiful </p>
                             <div class="video-author">
