doing some corrections

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -3,7 +3,6 @@
     <head>
         <title></title>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../css_advanced/styles.css">
@@ -11,7 +10,7 @@
     <body>
         <header>
             <div class="logo">
-                <a href=""> <img src="../css_advanced/favicon.ico" alt="A woman working on somthing" > </a>
+                <a href=""> <img src="../css_advanced/favicon.ico" alt="A woman smiling" > </a>
                 </div>
 
                 <div class="navbar">
